Add seed data for testing and update role handling in AuthService fix some bugs and errors when dealing with API endpoint call also add some sample data for testing